<resources>
    <string name="app_name">CurriculumApp</string>
    <string name="str_text_experiencia">Experiência</string>
    <string name="str_text_formacao">Formação</string>
    <string name="str_text_objetivo">Objetivo</string>
    <string name="str_text_idade">Idade</string>
    <string name="str_text_nomecompleto">Nome Completo</string>
    <string name="str_title_addcurriculo">Cadastre o currículo</string>
    <string name="str_btn_addCadastrar">Cadastrar</string>
    <string name="revIdadeText">Idade:</string>
    <string name="revNameText">Nome:</string>
    <string name="revObjText">Objetivo:</string>
    <string name="revFormText">Formação:</string>
    <string name="revExpText">Experiência:</string>
    <string name="revBtnConfim">Confirmar</string>
    <string name="noExistCurriculum">Nenhum Currículo Cadastrado, Clique no botão de + para adicionar um curriculo</string>
    <string name="mainEdit">Para editar o curriculo clique no botão de +</string>
</resources>